# terrain-viewshed-classifier

./: .gitignore  CMakeLists.txt  README.md  main.py  requirements.txt
cpp_src/: bindings.cpp  classifier.cpp  viewshed.cpp
src/: terrain_generator.py  visualize.py
